--- a/sshchesnyak_kts_android_09_2021/app/src/main/res/layout/fragment_onboarding.xml
+++ b/sshchesnyak_kts_android_09_2021/app/src/main/res/layout/fragment_onboarding.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/trial_screen_3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/TextView1"
+        android:id="@+id/SubTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20dp"
@@ -17,31 +17,31 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/BlankView" />
+        app:layout_constraintBottom_toBottomOf="@+id/BlankViewTop" />
 
     <TextView
-        android:id="@+id/BlankView"
+        android:id="@+id/BlankViewTop"
         android:layout_width="wrap_content"
         android:layout_height="1dp"
-        app:layout_constraintTop_toTopOf="@+id/CardView"
+        app:layout_constraintTop_toTopOf="@+id/ImageBorderView"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/TextView1" />
+        app:layout_constraintBottom_toBottomOf="@+id/SubTextView" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/CardView"
+        android:id="@+id/ImageBorderView"
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:layout_gravity="center"
         app:cardCornerRadius="250dp"
         app:cardBackgroundColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="@+id/ButtonView"
+        app:layout_constraintBottom_toBottomOf="@+id/LoginButtonView"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/TextView1">
+        app:layout_constraintTop_toTopOf="@+id/SubTextView">
 
         <ImageView
-            android:id="@+id/ImageView"
+            android:id="@+id/LogoView"
             android:layout_width="75dp"
             android:layout_height="75dp"
             android:scaleType="centerCrop"
@@ -49,20 +49,20 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/BlankView2"
+        android:id="@+id/BlankViewBottom"
         android:layout_width="wrap_content"
         android:layout_height="1dp"
-        app:layout_constraintTop_toTopOf="@+id/CardView"
+        app:layout_constraintTop_toTopOf="@+id/ImageBorderView"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/ButtonView" />
+        app:layout_constraintBottom_toBottomOf="@+id/LoginButtonView" />
 
     <Button
-        android:id="@+id/ButtonView"
+        android:id="@+id/LoginButtonView"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:text="@string/button_text"
-        app:layout_constraintTop_toTopOf="@+id/CardView"
+        app:layout_constraintTop_toTopOf="@+id/ImageBorderView"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
